--- a/public_html/bower.json
+++ b/public_html/bower.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "angular": "~1.4.6",
     "angular-route": "~1.4.6",
-    "bootstrap": "~3.3.5"
+    "angularfire": "~1.1.2",
+    "bootstrap": "~3.3.5",
+    "firebase": "~2.2.9",
+    "font-awesome": "~4.4.0"
   }
 }
