--- a/public_html/bower.json
+++ b/public_html/bower.json
@@ -18,6 +18,7 @@
     "angularfire": "~1.1.2",
     "bootstrap": "~3.3.5",
     "firebase": "~2.2.9",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "less": "~2.5.1"
   }
 }
